RESOLVED FIXED20951
Typo in Position::getInlineBoxAndOffset()
https://bugs.webkit.org/show_bug.cgi?id=20951
Summary Typo in Position::getInlineBoxAndOffset()
mitz
Reported 2008-09-19 18:25:54 PDT
Patch forthcoming
Attachments
Fix the typo and add an assertion that fails without the fix (1.75 KB, patch)
2008-09-19 18:27 PDT, mitz
sullivan: review+
mitz
Comment 1 2008-09-19 18:27:28 PDT
Created attachment 23589 [details] Fix the typo and add an assertion that fails without the fix
mitz
Comment 2 2008-09-19 20:23:41 PDT
Note You need to log in before you can comment on or make changes to this bug.