        Reviewed by John Sullivan.

- fix https://bugs.webkit.org/show_bug.cgi?id=20951
          Typo in Position::getInlineBoxAndOffset()
          and add an assertion

        Without the fix, the newly-added assertion fails in platform/mac/editing/input/caret-primary-bidi.html

        * dom/Position.cpp:
        (WebCore::Position::getInlineBoxAndOffset):
        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::positionForOffset):



Canonical link: https://commits.webkit.org/28977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36698 268f45cc-cd09-0410-ab3c-d52691b4dbfc