WebCore/dom/Position.cpp
@@ -873,7 +873,7 @@ void Position::getInlineBoxAndOffset(EAffinity affinity, TextDirection primaryDi
                     break;
                 inlineBox = tertiaryBox;
             }
-            caretOffset = !inlineBox->caretLeftmostOffset();
+            caretOffset = inlineBox->caretLeftmostOffset();
         }
     } else {
         InlineBox* nextBox = inlineBox->nextLeafChild();
